# bastion

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  HEARTBEAT.md  Makefile  README.md  SOUL.md  STRATEGY.md  USER.md  bastion.local.toml  bastion.toml  benchmark.py  conftest.py  docker-compose.mesh-e2e.yml  docker-compose.yml  installer.sh  pyproject.toml
.bastion/: mcp-servers.example.json  mcp-servers.json  sessions.db  uat-phase2.sh  uat-webhook.sh
.github/workflows/: ci.yml  deploy-bastion.yml.example
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/06-ecosystem-mobile-opcional-p-s-v1-0/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-05-PLAN.md  06-05-SUMMARY.md  06-06-PLAN.md  06-06-SUMMARY.md  06-07-PLAN.md  06-07-SUMMARY.md  06-SECURITY.md
config/: default.toml
crates/bastion-agent-runtime/: Cargo.toml
crates/bastion-agent-runtime/src/: acpx.rs  codex.rs  lib.rs
crates/bastion-agent-runtime/tests/: acpx_live_claude.rs  acpx_live_opencode.rs  codex_live.rs
crates/bastion-cognition/src/: goal.rs
crates/bastion-extension-protocol/src/: lib.rs
crates/bastion-mcp/src/: adapters.rs  tool_source.rs
crates/bastion-providers/src/: anthropic.rs  lib.rs  ollama.rs  openai.rs  registry.rs
crates/bastion-runtime/: Cargo.toml
crates/bastion-types/: Cargo.toml
crates/bastion-types/src/: lib.rs
docs/: bastion-cloud-architecture.md  bug-report-permissions-and-usermd.md  plan-bug-report-permissions-and-usermd.md  terminal-agent-providers.md
docs/api-baseline/: bastion-agent-runtime.txt  bastion-cognition.txt  bastion-extension-protocol.txt  bastion-mcp.txt  bastion-mesh.txt  bastion-personas.txt  bastion-runtime.txt  bastion-types.txt  bastion.txt
docs/en/: README.md
docs/pt-br/: README.md
docs/revamp/: A-01-agentruntime-contract.md  A-05-conformance-matrix.md  A-06-A-07-live.md  LEGACY-INVENTORY.md  LOOP-REPORT.md  M1-07-characterization-map.md  M2-CLOSE.md  M3-CLOSE.md
examples/embedded-host-slice/src/: main.rs
examples/embedded-host/src/: main.rs
examples/minimal-agent/src/: main.rs
mobile/: pubspec.yaml
mobile/lib/: main.dart
mobile/lib/screens/: chat_screen.dart  cockpit_screen.dart  pairing_screen.dart
mobile/lib/services/: api_service.dart  sse_service.dart
mobile/test/: widget_test.dart
scripts/: check-crate-deps.sh  check-scope-and-scrub.sh  dump-public-api.sh
skills/crisis-mode/: SKILL.md  manifest.json
skills/guardrails/: guardrails.py  manifest.json
skills/guardrails/tests/: test_guardrail_properties.py
skills/life-log/: SKILL.md  life_log_cli.py  manifest.json
skills/life-log/db/: __init__.py  protocols.py  sqlite_adapter.py  supabase_adapter.py
skills/life-log/tests/: life_log_helpers.py  test_life_log_properties.py
skills/memupalace/: Dockerfile  embedder.py  factory.py  insight_cache.py  knowledge_graph.py  mcp_server.py  models.py  store.py
skills/memupalace/tests/: test_embedder.py  test_insight_cache.py  test_mcp_server.py  test_query_sanitizer.py
skills/mesh-connect/: SKILL.md
skills/mobile-connect/: manifest.json
skills/onboarding/: SKILL.md  manifest.json  totp.py
skills/output-validator/output_validator/: __init__.py  metrics_tracker.py
skills/output-validator/tests/: test_integration.py  test_schema_extractor.py
skills/persona-engine/: SKILL.md  manifest.json  persona_engine.py
skills/proactive/: SKILL.md  __init__.py  manifest.json  proactive.py
skills/proactive/locales/: en.json  pt-BR.json
skills/self-improving/: Dockerfile  SKILL.md  manifest.json  mcp_server.py  promotion.py
skills/skill-writer/: Dockerfile  SKILL.md  distiller.py  manifest.json  mcp_server.py  skill_writer.py  test_security.py  versioning.py
skills/utils/: i18n.py
skills/weekly-review/: SKILL.md  manifest.json
skills/weight-system/: SKILL.md  manifest.json  weight_system.py
src/: agent_runtime.rs  cabinet.rs  config.rs  eval.rs  goal.rs  hooks.rs  identity.rs  interop.rs  learn.rs  lib.rs  main.rs  mesh.rs  persona.rs  proactive.rs  scheduler.rs  session.rs  types.rs
src/agent/: command.rs  compactor.rs  context.rs  dream.rs  handle.rs  identity.rs  loop_.rs  memory_rag.rs  mod.rs  ports.rs  procedural.rs  skills.rs
src/agent_runtime/: conformance.rs
src/api/: infer.rs
src/cabinet/: mod.rs  orchestrator.rs  policy.rs  synth.rs
src/capability/: adapters.rs  approval.rs  mod.rs  registry.rs  structured_output.rs
src/channel/: discord.rs  email.rs  mod.rs  slack.rs  telegram.rs  voice.rs  webhook.rs  whatsapp.rs
src/eval/: capture.rs  failure_sink.rs  mod.rs
src/extension/: mod.rs  subprocess.rs
src/goal/: mod.rs
src/hooks/: approval_intent.rs  egress.rs  guardrails.rs  mod.rs  observer.rs  output_validator.rs
src/identity/: age_identity.rs
src/interop/: export.rs  mod.rs
src/learn/: dedup.rs  delta.rs  mod.rs
src/mcp/: client.rs  mod.rs  oauth.rs  registry.rs  registry_setup.rs  server.rs  tool_source.rs
src/memory/: mod.rs  sqlite.rs
src/mesh/: allowlist.rs  context_provider.rs  mod.rs  p2p.rs
src/persona/: mod.rs  responder.rs  router.rs  runner.rs  soul.rs
src/proactive/: mod.rs
src/provider/: anthropic.rs  gemini.rs  groq.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  registry.rs  terminal_agent.rs
src/scheduler/: cron.rs
src/session/: mod.rs  sqlite.rs
tests/: agent_loop_public.rs  agent_runtime_backend_live.rs  agent_runtime_conformance.rs  agent_runtime_delegated_task_live.rs  autocompact.rs  capability_registry.rs  characterization_boundary.rs  config_layering.rs  extension_subprocess.rs  fallback_egress_gate.rs  mcp_client_e2e.rs  output_validator_memory.rs  prompt_cache_prefix.rs  provider_hotswap.rs  session_continuity.rs  skills_loader_yaml.rs  stigmergy_mechanism.rs  tool_fidelity.rs
tests/evals/: mod.rs  spy_provider.rs
(+27 files in other folders)
