[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ── Project metadata ──────────────────────────────────────────────────────────

[project]
name = "bastion"
version = "2.0.0"
description = "Life OS agent built on OpenClaw — persona-aware, self-hosted, privacy-first"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

# Runtime deps used by the skill Python modules
dependencies = [
    "pyotp>=2.9",
    "PyJWT>=2.8",
    "httpx>=0.27",
    "sqlite-vec>=0.1",
    "pydantic>=2.7",
    "qrcode>=7.4",
]

[project.optional-dependencies]
supabase = [
    "supabase>=2.4",
]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "pyright>=1.1",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["skills"]

[tool.setuptools.package-dir]
"" = "."

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["skills"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [
    "skills/crisis-mode",
    "skills/crisis-mode/tests",
    "skills/guardrails",
    "skills/guardrails/tests",
    "skills/life-log",
    "skills/life-log/tests",
    "skills/mobile-connect",
    "skills/mobile-connect/tests",
    "skills/onboarding",
    "skills/onboarding/tests",
    "skills/persona-engine",
    "skills/persona-engine/tests",
    "skills/proactive",
    "skills/proactive/tests",
    "skills/self-improving",
    "skills/self-improving/tests",
    "skills/skill-writer",
    "skills/skill-writer/tests",
    "skills/weekly-review",
    "skills/weekly-review/tests",
    "skills/weight-system",
    "skills/weight-system/tests",
]

# ── Ruff (lint + format) ──────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["skills"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default args
    "SIM108", # ternary operator — sometimes less readable
]

[tool.ruff.lint.isort]
known-first-party = ["skills"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pyright (type checking) ───────────────────────────────────────────────────

[tool.pyright]
pythonVersion = "3.12"
include = ["skills"]
exclude = ["**/__pycache__", "**/.hypothesis", "**/node_modules"]
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false   # third-party stubs often missing — don't fail CI
reportUnusedImport = true
reportUnusedVariable = true
